// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Title tests should match snapshot with default Title 1`] = `
<DocumentFragment>
  <div
    class="styles__ContainerTitle-sc-17f0diz-1 kMIxue"
  >
    <h1
      class="styles__Heading-sc-17f0diz-0 iYJgeC"
    />
  </div>
</DocumentFragment>
`;

exports[`Title tests should match snapshot with default Title with text 1`] = `
<DocumentFragment>
  <div
    class="styles__ContainerTitle-sc-17f0diz-1 kMIxue"
  >
    <h1
      class="styles__Heading-sc-17f0diz-0 iYJgeC"
    >
      Testing text
    </h1>
  </div>
</DocumentFragment>
`;
